# useful_code

./: README.md
macos_ramdisk/: README.txt
mmap_speed_test/: CMakeLists.txt  Readme.md  mmap_speed_test.cpp
ram_speed_test/: CMakeLists.txt  ram_speed_test copy.cpp  ram_speed_test.cpp  readme.md
ramdisk/: CMakeLists.txt  ramdisk  old.cpp  ramdisk.cpp
read_write_speed_test/: CMakeLists.txt  read_write_speed.cpp
